// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`switchButton > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_primary__m5izgx8 styles__m5izgx6"
        style="left: 0px; width: 500px;"
      />
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_4_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_4_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_c_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_c_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders correctly medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_medium__m5izgx1 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_primary__m5izgx8 styles__m5izgx6"
        style="left: 0px; width: 500px;"
      />
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_m_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_m_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_u_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_u_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders correctly with children changing 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_primary__m5izgx8 styles__m5izgx6"
        style="left: 0px; width: 500px;"
      />
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_1q_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_1q_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_22_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_22_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders correctly with right value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_primary__m5izgx8 styles__m5izgx6"
        style="left: 0px; width: 500px;"
      />
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_18_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_18_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_1g_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_1g_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
    >
      <div
        class="styles_neutral__m5izgx7 styles__m5izgx6"
        style="left: 0px; width: 100px;"
      />
      <div
        class="styles__m5izgx5 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="true"
        data-disabled="false"
        data-testid="switch-button-left"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="true"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              checked=""
              class="styles__17da2jla"
              id="_r_3g_"
              name="test"
              tabindex="-1"
              type="radio"
              value="left"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_3g_"
            >
              Left
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__m5izgx5 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        data-checked="false"
        data-disabled="false"
        data-testid="switch-button-right"
        data-type="radio"
        role="button"
        style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
        tabindex="0"
      >
        <div
          class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
            data-checked="false"
            data-invalid="false"
          >
            <input
              aria-disabled="false"
              class="styles__17da2jla"
              id="_r_3o_"
              name="test"
              tabindex="-1"
              type="radio"
              value="right"
            />
            <svg
              class="styles__17da2jlb"
              viewBox="0 0 24 24"
            >
              <title>
                radio
              </title>
              <g>
                <circle
                  class="styles__17da2jle"
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="6"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                  stroke-width="2"
                />
                <circle
                  class="styles__17da2jld"
                  cx="12"
                  cy="12"
                  r="8"
                />
                <circle
                  class="styles__17da2jlc"
                  cx="12"
                  cy="12"
                  r="5"
                />
              </g>
            </svg>
            <label
              class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_3o_"
            >
              Right
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders with disabled and tooltip on SwitchButton.Option 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1y5sygv5"
    >
      <div
        class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        tabindex="0"
      >
        <div
          class="styles_primary__m5izgx8 styles__m5izgx6"
          style="left: 0px; width: 100px;"
        />
        <div
          class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d"
          style="--_4k0ekn3: 1;"
        >
          <div
            class="styles__1y5sygv5 styles_fullHeight_true__1y5sygv6"
            tabindex="0"
          >
            <div
              class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              data-checked="true"
              data-disabled="true"
              data-testid="switch-button-left"
              data-type="radio"
              role="button"
              style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
            >
              <div
                class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              >
                <div
                  aria-disabled="true"
                  class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
                  data-checked="true"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="true"
                    checked=""
                    class="styles__17da2jla"
                    disabled=""
                    id="_r_2u_"
                    name="test"
                    tabindex="-1"
                    type="radio"
                    value="left"
                  />
                  <svg
                    class="styles__17da2jlb"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="styles__17da2jle"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="styles__17da2jld"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="styles__17da2jlc"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                    for="_r_2u_"
                  >
                    Left
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="styles__17da2jla"
                id="_r_36_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                for="_r_36_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders with icons 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1y5sygv5"
    >
      <div
        class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        tabindex="0"
      >
        <div
          class="styles_primary__m5izgx8 styles__m5izgx6"
          style="left: 0px; width: 100px;"
        />
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="true"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="true"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                checked=""
                class="styles__17da2jla"
                id="_r_42_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles__17da2jl9 styles__17da2jl8"
                for="_r_42_"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M14.954 10.678c.213-.477-.36-.882-.84-.674a6.17 6.17 0 0 1-8.119-8.119c.21-.479-.197-1.052-.673-.84a7.294 7.294 0 1 0 9.632 9.633"
                  />
                </svg>
              </label>
            </div>
          </div>
        </div>
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="styles__17da2jla"
                id="_r_48_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles__17da2jl9 styles__17da2jl8"
                for="_r_48_"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M8 1a.75.75 0 0 1 .75.75v1.5a.75.75 0 0 1-1.5 0v-1.5A.75.75 0 0 1 8 1m2.5 7a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0m2.45-3.889a.75.75 0 1 0-1.061-1.061l-1.061 1.061a.75.75 0 0 0 0 1.061.75.75 0 0 0 1.061 0zM15 8a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5A.75.75 0 0 1 15 8m-3.111 4.95a.75.75 0 1 0 1.061-1.061l-1.061-1.061a.75.75 0 0 0-1.06 1.061zM8 12a.75.75 0 0 1 .75.75v1.5a.75.75 0 0 1-1.5 0v-1.5A.75.75 0 0 1 8 12m-2.828-.111a.75.75 0 0 0 0-1.061.75.75 0 0 0-1.061 0L3.05 11.889a.75.75 0 1 0 1.061 1.061zM4 8a.75.75 0 0 1-.75.75h-1.5a.75.75 0 0 1 0-1.5h1.5A.75.75 0 0 1 4 8m.111-2.828a.75.75 0 0 0 1.061 0 .75.75 0 0 0 0-1.061L4.111 3.05A.75.75 0 1 0 3.05 4.111z"
                  />
                </svg>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`switchButton > renders with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1y5sygv5"
    >
      <div
        class="styles_small__m5izgx2 styles__m5izgx0 styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j"
        tabindex="0"
      >
        <div
          class="styles_primary__m5izgx8 styles__m5izgx6"
          style="left: 0px; width: 100px;"
        />
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="true"
          data-disabled="false"
          data-testid="switch-button-left"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="true"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                checked=""
                class="styles__17da2jla"
                id="_r_2c_"
                name="test"
                tabindex="-1"
                type="radio"
                value="left"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                for="_r_2c_"
              >
                Left
              </label>
            </div>
          </div>
        </div>
        <div
          class="styles__m5izgx4 styles__m5izgx3 styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          data-checked="false"
          data-disabled="false"
          data-testid="switch-button-right"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles_medium__17da2jl4 styles__17da2jl2"
              data-checked="false"
              data-invalid="false"
            >
              <input
                aria-disabled="false"
                class="styles__17da2jla"
                id="_r_2k_"
                name="test"
                tabindex="-1"
                type="radio"
                value="right"
              />
              <svg
                class="styles__17da2jlb"
                viewBox="0 0 24 24"
              >
                <title>
                  radio
                </title>
                <g>
                  <circle
                    class="styles__17da2jle"
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="6"
                  />
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jld"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jlc"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles_medium__17da2jl7 styles__17da2jl5 styles__17da2jl8 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                for="_r_2k_"
              >
                Right
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
